fix: keep linked attachments visible in navigation

--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -903,4 +903,12 @@
       }
     }
   }
+
+  &__navigation {
+    .attachment-dirent {
+      &__action--folder {
+        display: none;
+      }
+    }
+  }
 }
